[Android][Performance] Prevent accessory from over-openening keyboard

This CL prevents the keyboard accessory from triggering a keyboard that
hasn't been requested.

Example: Open youtube or chrome://flags
Before this patch:
  The keyboard accessory controller detects that there are passwords for
  this site. Because the search field is focused by default, it will
  request openening the keyboard.
Why this is wrong:
  The controller wrongfully assumed that a focused input field always
  triggers the keyboard. This is wrong, esp. for pageloads.
After this patch:
  The controller requests to open the keyboard iff the accessory sheet
  is opened.

Why has this become a problem now?
Before https://crrev.com/c/1177361, the controller would just request
the accessory to be closed. This caused nasty artifacts and bugs.
Therefore, it requested to open keyboard to dismiss the sheet gently.
This resulted in opening the keyboard too often.

What is potentially impacted by this:
 - Performance tests with search bars: Confirmed
   --> smoothness.*/youtube_pinch_2018 not failing consistently
 - Health tests: Likely confirmed
   system_health.memory_mobile/browse.tools.maps debug run changed
   memory:chrome:all_processes:reported_by_chrome:effective_size
   by 7.7%
 - Startup with previously opened sites: Confirmed
   Following instructions in issue 876228 don't reproduce error.

Bug: 875859, 876025, 876228
Change-Id: Ic5873c07cb8652bc0da5edcca8324f2680baac11
Reviewed-on: https://chromium-review.googlesource.com/1184847
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Friedrich Horschig [CEST] <fhorschig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585454}
Former-commit-id: 760cc2256b4d27f9a01c6102a3392f7840df7a4f